objects/kugo2p__SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>kugo2p__Online_Page_Status__c</fullName>
        <formula>IF(
    AND(
             kugo2p__RecordStatus__c &lt;&gt; &quot;Cancelled&quot;,
             OR( ISBLANK(kugo2p__OnlinePaymentExpirationDate__c),
                     kugo2p__OnlinePaymentExpirationDate__c&gt;=TODAY(),
                     kugo2p__RecordStatus__c = &quot;Approved&quot;,
                     kugo2p__RecordStatus__c = &quot;Released&quot;

                  )
    ),
    (&quot;[&quot; &amp; HYPERLINK(kugo2p__ShipToStreet__c&amp;&quot;/kugo2p__OnlineOrder?key=&quot; &amp; kugo2p__OnlineApprovalKey__c &amp; &quot;&amp;id=&quot;&amp; Id, &quot;Preview&quot;) &amp; &quot;] &quot; ),
    IF(
             OR(
                       ISBLANK(kugo2p__OnlinePaymentExpirationDate__c), 
                       kugo2p__RecordStatus__c  = &quot;Released&quot;,
                       kugo2p__RecordStatus__c = &quot;Cancelled&quot;
             ), 
             &quot;Inactive&quot;, 
             &quot;Expired&quot;
     )
)</formula>
        <label>Online Order Page Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderACCAppliedPaymentAmount__c</fullName>
        <label>Order ACC Applied Payment Amount</label>
        <summarizedField>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__AppliedPaymentAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderAdditionalChargeCredit__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderName__c</fullName>
        <label>Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderProductLineAppliedPaymentAmount__c</fullName>
        <label>Order Product Lin Applied Payment Amount</label>
        <summarizedField>kugo2p__SalesOrderProductLine__c.kugo2p__AppliedPaymentAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderServiceLineAppliedPaymentAmount__c</fullName>
        <label>Order Service Lin Applied Payment Amount</label>
        <summarizedField>kugo2p__SalesOrderServiceLine__c.kugo2p__AppliedPaymentAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentMethod__c</fullName>
        <description>Filled from Payment Method on the Quote if Order is generated from Quote; otherwise, from Payment Method on the Additional Account Info.

If Online Checkout is enabled, Payment Method not equal to &quot;Invoice&quot; will display [Accept &amp; Pay] on Online Order.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentStatus2__c</fullName>
        <formula>IF( 
    OR(kugo2p__RecordStatus__c == &quot;Draft&quot;, kugo2p__RecordStatus__c == &quot;Sent&quot; ,AND(kugo2p__RecordStatus__c == &quot;Cancelled&quot;,  kugo2p__BalanceDueAmount__c == kugo2p__NetAmount__c )), &quot;&quot;,
    IF(
        AND (kugo2p__AppliedPaymentAmount__c == 0, kugo2p__BalanceDueAmount__c &gt;0), &quot;Unpaid&quot;,
        IF(
            kugo2p__BalanceDueAmount__c &lt;= 0.00, &quot;Paid&quot;,
           IF(kugo2p__AppliedPaymentAmount__c &lt; 0.00, &quot;Over Refunded&quot;,
                 IF(kugo2p__AppliedPaymentAmount__c &gt; kugo2p__NetAmount__c, &quot;Overpaid&quot;,
                              &quot;Partially Paid&quot;))
        )
    )
)</formula>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookName__c</fullName>
        <description>Price Book associated with this Order. Only Products from the Price Book can be added to this Order. Please use [Choose Price Book] button to change the Price Book. This field is replaced by the Price Book lookup field.</description>
        <inlineHelpText>To change the price book associated with this order, please click on the Choose Price Book button</inlineHelpText>
        <label>Price Book Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book associated with this Order. Only Products from the Price Book can be added to this Order. Please use [Choose Price Book] button to change the Price Book.</description>
        <inlineHelpText>Price Book associated with this Order. Only Products from the Price Book can be added to this Order. Please use [Choose Price Book] button to change the Price Book.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintSpecificTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Specific Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductAmount__c</fullName>
        <label>Product Amount</label>
        <summarizedField>kugo2p__SalesOrderProductLine__c.kugo2p__ProductAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDateAvailableToPromise__c</fullName>
        <label>Product Date Available to Promise</label>
        <summarizedField>kugo2p__SalesOrderProductLine__c.kugo2p__DateAvailableToPromise__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDateRequired__c</fullName>
        <label>Product Date Required</label>
        <summarizedField>kugo2p__SalesOrderProductLine__c.kugo2p__DateRequired__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderProductLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductTaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductTotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c - kugo2p__ProductDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductVATAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductandServiceSubtotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product and Service Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <description>Valid Statuses are: Draft, Sent, Approved, Released, and Cancelled. Released Order status cannot be manually changed; use Status formula field instead. Cancelled Order status cannot be changed at all.</description>
        <inlineHelpText>Valid Statuses are: Draft, Sent, Approved, Released, and Cancelled. Released Order status cannot be manually changed; use Status formula field instead. Cancelled Order status cannot be changed at all.</inlineHelpText>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificateExpires__c</fullName>
        <label>Resale Certificate Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificate__c</fullName>
        <label>Resale Certificate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Number</label>
        <referenceTo>kugo2p__SalesQuote__c</referenceTo>
        <relationshipLabel>Related Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesRegion__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SalesTerritory__c</fullName>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceAmount__c</fullName>
        <label>Service Amount</label>
        <summarizedField>kugo2p__SalesOrderServiceLine__c.kugo2p__ServiceAmount__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDateAvailableToPromise__c</fullName>
        <label>Service Date Available to Promise</label>
        <summarizedField>kugo2p__SalesOrderServiceLine__c.kugo2p__DateServiceStart__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDateRequired__c</fullName>
        <label>Service Date Required</label>
        <summarizedField>kugo2p__SalesOrderServiceLine__c.kugo2p__DateServiceStart__c</summarizedField>
        <summaryForeignKey>kugo2p__SalesOrderServiceLine__c.kugo2p__SalesOrder__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTaxAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTotalAmount__c</fullName>
        <formula>round(kugo2p__ServiceAmount__c - kugo2p__ServiceDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceVATAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCity__c</fullName>
        <label>Ship To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToCountry__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStateProvince__c</fullName>
        <label>Ship To State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStreetLong__c</fullName>
        <description>A longer version of the origingal ShipToStreet__c field</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToStreet__c</fullName>
        <label>Hidden</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipToZipPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SpecificTextandTerms__c</fullName>
        <label>Specific Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <description>This field displays the status of the Order with the relevant actions, if applicable, that can be performed:

- Draft, Sent = Edits Allowed, No Payments.

- Approved = Edits Allowed, Accept Payments, Create Assets

- Released = No Edits, Accept Payments, Creates Shipments and Invoices.

- Cancelled = No Payments, Account Balance Not Updated.</description>
        <formula>IF(
  kugo2p__RecordStatus__c = &apos;Draft&apos;,
  kugo2p__RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Sent&amp;ordId=&apos; &amp; Id, &apos;Submit&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&apos; &amp; Id, &apos;Approve&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos; &amp; Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Cancelled&amp;ordId=&apos; &amp; Id, &apos;Cancel&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
  IF(
    kugo2p__RecordStatus__c = &apos;Sent&apos;,
    kugo2p__RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Approved&amp;ordId=&apos; &amp; Id, &apos;Approve&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos; &amp; Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Cancelled&amp;ordId=&apos; &amp; Id, &apos;Cancel&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
    IF(
    kugo2p__RecordStatus__c = &apos;Approved&apos;,
      kugo2p__RecordStatus__c &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Released&amp;ordId=&apos; &amp; Id, &apos;Release&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=CancelApproved&amp;ordId=&apos; &amp; Id, &apos;Cancel&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
      kugo2p__RecordStatus__c &amp; 
      IF(
        kugo2p__RecordStatus__c = &apos;Released&apos;,
        &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=Unrelease&amp;ordId=&apos; &amp; Id, &apos;Unrelease&apos;, &quot;_self&quot;) &amp; &quot;] &quot; &amp; &quot; [&quot; &amp; HYPERLINK(&apos;/apex/kugo2p__kontroller?action=updateOrderStatus&amp;status=CancelReleased&amp;ordId=&apos; &amp; Id, &apos;Cancel&apos;, &quot;_self&quot;) &amp; &quot;] &quot;,
        &apos;&apos;
      )
    )
  )
)</formula>
        <inlineHelpText>*Draft, Sent = Edits Allowed, No Payments

*Approved = Edits Allowed, Accept Payments

*Released = No Edits, Accept Payments, Creates Service Deliveries/Shipments and Invoices

*Cancelled = No Payments, Account Balance Not Updated</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SubtotalAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditAmount__c + kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c + kugo2p__ServiceAmount__c - kugo2p__TotalDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalDiscountAmount__c</fullName>
        <formula>round(kugo2p__ProductDiscountAmount__c + kugo2p__ServiceDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalTaxAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditTaxAmount__c + kugo2p__ServiceTaxAmount__c + kugo2p__ProductTaxAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalVATAmount__c</fullName>
        <formula>round(kugo2p__AdditionalChargeCreditVATAmount__c  + kugo2p__ServiceVATAmount__c  + kugo2p__ProductVATAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__UpdateAdditionalAccountInfoContacts__c</fullName>
        <description>Update Additional Account Info corresponding field on Order Release. Default value is set in Kugamon Settings.</description>
        <inlineHelpText>Update Additional Account Info corresponding field on Order Release</inlineHelpText>
        <label>Update Additional Account Info Contacts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__ContactType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__VATRegistration__c</fullName>
        <label>VAT Registration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__WebOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__WebReferenceOrder__c</fullName>
        <label>Web Reference Order</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>kugo2p__All_Orders</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__OrderName__c</columns>
        <columns>kugo2p__IsPrimary__c</columns>
        <columns>kugo2p__Account__c</columns>
        <columns>kugo2p__DateRequired__c</columns>
        <columns>kugo2p__ProductAmount__c</columns>
        <columns>kugo2p__ServiceAmount__c</columns>
        <columns>kugo2p__NetAmount__c</columns>
        <columns>kugo2p__BalanceDueAmount__c</columns>
        <columns>kugo2p__RecordStatus__c</columns>
        <columns>kugo2p__PaymentStatus2__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{YYMMDD}-{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>kuga_sub__Expansion</fullName>
        <active>true</active>
        <description>An Expansion Order adds to a Contract.</description>
        <label>Expansion</label>
    </recordTypes>
    <recordTypes>
        <fullName>kuga_sub__New</fullName>
        <active>true</active>
        <description>A New Order leads to the creation of a Contract.</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>kuga_sub__Renewal</fullName>
        <active>true</active>
        <description>A Renewal Order extends or replaces a Contract.</description>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>